<resources>
    <string name="app_name">KomentarApp</string>
    <string name="text_naslovne">Naslovne</string>
    <string name="text_najnovije">Najnovije</string>
    <string name="text_video">Video</string>
    <string name="text_pretraga">Pretraga</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_title">Title</string>
    <string name="text_category">Category</string>
    <string name="text_date_time">Date/Time</string>
    <string name="text_pretrazi">Pretraži</string>
    <string name="text_category_title">Category Title</string>
    <string name="text_subcategory_title">Subcategory title</string>
    <string name="text_naslovna">Naslovna</string>
    <string name="text_vremenska_prognoza">Vremenska prognoza</string>
    <string name="text_kursna_lista">Kursna lista</string>
    <string name="text_horoskop">Horoskop</string>
    <string name="text_push_notifikacije">Push notifikacije</string>
    <string name="text_marketing">Marketing</string>
    <string name="text_uslovi_koriscenja">Uslovi korišćenja</string>
    <string name="text_kontakt">Kontakt</string>
    <string name="text_nema_vise_vesti">Nema više vesti!</string>
    <string name="text_autor">Autor:</string>
    <string name="text_title_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac euismod neque, a posuere lorem.</string>
    <string name="text_author_name">Author\'s name</string>
    <string name="text_izvor">Izvor:</string>
    <string name="text_source">Source</string>
    <string name="text_description_example">Cras eleifend scelerisque imperdiet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam vestibulum vehicula turpis, et aliquet ligula gravida non. Curabitur rutrum in augue interdum ultrices.</string>
    <string name="text_tagovi">Tagovi:</string>
    <string name="text_komentari">Komentari</string>
    <string name="text_ostavi_komentar">Ostavi komentar +</string>
    <string name="text_svi_komentari">Svi komentari (0)</string>
    <string name="text_povezane_vesti">Povezane vesti</string>
    <string name="text_tag_example">Ovde ide tag</string>
    <string name="text_no_comments">Nema istaknutih komentara</string>
    <string name="text_share">Podeli</string>
    <string name="text_name">Name</string>
    <string name="text_reply">Odgovori</string>
    <string name="text_same_category_news">Vesti iz iste kategorije</string>
    <string name="text_ime">Ime</string>
    <string name="text_your_comment">Vaš komentar</string>
    <string name="text_post_comment">Pošaljite komentar</string>
    <string name="text_reply_comment">Odgovorite na komentar</string>
    <string name="text_email">Email</string>
    <string name="text_your_reply">Vaš odgovor</string>
    <string name="text_add">+</string>
    <string name="text_editors_choice">Izbor urednika</string>
    <string name="title_activity_tag">TagActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_subcategory">Subcategory</string>
    <string name="text_horoscope_sign">Horoscope sign</string>
    <string name="text_work_in_progress">Aktivnost je u pripremi. Hvala vam na strpljenju.</string>
    <string name="text_currency">Kursna lista</string>
    <string name="text_weather">Vremenska prognoza</string>
    <string name="text_location">Location</string>
    <string name="text_pressure">Vazdušni pritisak</string>
    <string name="text_humidity">Vlažnost vazduha</string>
    <string name="text_seven_day_forcast">Prognoza za narednih sedam dana</string>
    <string name="text_min_max">max/min</string>
    <string name="text_wind">Brzina vetra</string>
    <string name="text_refresh">Osveži</string>
    <string name="text_weather_forcast">Vremenska prognoza</string>
    <string name="text_loading_news">Vesti se učitavaju...</string>
    <string name="text_no_top_comments">Nema istaknutih komentara.</string>
    <string name="text_horoscope">Horoskop</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="text_no_app">Nemate instaliranu neophodnu aplikaciju.</string>
    <string name="text_my_news">Moje vesti</string>
    <string name="title_activity_saved_news">SavedNewsActivity</string>
    <string name="text_no_saved_news">Lista sačuvanih vesti je prazna</string>
    <string name="text_close_app">Da li želite da napustite aplikaciju?</string>
    <string name="text_yes">DA</string>
    <string name="text_no">NE</string>
</resources>