<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_main"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin_main"
        android:text="@string/text_title_example"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_biggest"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCreatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_main"
        android:text="@string/text_date_time"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <View
        android:id="@+id/view"
        android:layout_width="0.5dp"
        android:layout_height="14dp"
        android:layout_marginStart="@dimen/margin_small"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCreatedAt"
        app:layout_constraintStart_toEndOf="@+id/textViewCreatedAt"
        app:layout_constraintTop_toTopOf="@+id/textViewCreatedAt" />

    <ImageView
        android:id="@+id/imageViewCommentCount"
        android:layout_width="@dimen/text_size_normal"
        android:layout_height="@dimen/text_size_normal"
        android:layout_marginStart="@dimen/margin_small"
        android:src="@drawable/ic_comment_blue"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCreatedAt"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/textViewCreatedAt" />

    <TextView
        android:id="@+id/textViewCommentCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:text="5"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintStart_toEndOf="@+id/imageViewCommentCount"
        app:layout_constraintTop_toTopOf="@+id/textViewCreatedAt" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/margin_main"
        android:background="@color/blue_lightest"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewCreatedAt">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@string/text_autor"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@string/text_author_name"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView1"
            app:layout_constraintStart_toEndOf="@+id/textView1"
            app:layout_constraintTop_toTopOf="@+id/textView1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_main"
            android:text="@string/text_izvor"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewAuthor"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@string/text_source"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_main"
        android:text="@string/text_description_example"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>