<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.comments.CommentsActivity">

    <FrameLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_back"
            android:layout_gravity="center_vertical"/>
    </FrameLayout>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_ime"
        android:textColorHint="@color/blue_light"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:background="@drawable/edit_text_outline_blue"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_marginStart="@dimen/margin_main"
        android:layout_marginEnd="@dimen/margin_main"
        android:padding="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_main"
        android:background="@drawable/edit_text_outline_blue"
        android:hint="@string/text_email"
        android:padding="@dimen/margin_small"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue_light"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toEndOf="@+id/editTextName"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextContent"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginTop="@dimen/margin_main"
        android:background="@drawable/edit_text_outline_blue"
        android:gravity="start"
        android:hint="@string/text_your_reply"
        android:padding="@dimen/margin_small"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue_light"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toEndOf="@+id/editTextName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <Button
        android:id="@+id/buttonPostReply"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:text="@string/text_reply_comment"
        android:textSize="@dimen/text_size_big"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/margin_main"
        app:layout_constraintEnd_toEndOf="@+id/editTextContent"
        app:layout_constraintStart_toStartOf="@+id/editTextContent"
        app:layout_constraintTop_toBottomOf="@+id/editTextContent"/>

</androidx.constraintlayout.widget.ConstraintLayout>