<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/weather_background"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/text_size_big"
        android:layout_marginStart="@dimen/text_size_big"
        android:layout_marginEnd="@dimen/text_size_big">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_main"
            android:shadowColor="@color/black"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/text_horoscope_sign"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_biggest"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewHoroscope"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_main"
            android:background="@drawable/horoscope_sign_background"/>

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_main"
            android:shadowColor="@color/black"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/text_date_time"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_main"
            android:shadowColor="@color/black"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:text="@string/text_description_example"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />

    </LinearLayout>


</LinearLayout>