<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_main"
        android:layout_marginEnd="@dimen/margin_main"
        android:layout_marginBottom="@dimen/margin_main">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_logo" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_video_play" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/margin_main"
            android:layout_marginEnd="@dimen/margin_main"
            android:layout_marginBottom="34dp"
            android:maxLines="4"
            android:text="@string/text_title_example"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/margin_main"
            android:layout_marginBottom="@dimen/margin_main"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_category"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

            <View
                android:id="@+id/view"
                android:layout_width="0.5dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/textViewCreatedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_date_time"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

    </FrameLayout>


</LinearLayout>